k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/part-of: nexo-dashboard
